projetos/academia-salesforce/force-app/main/default/objects/Mensalidade__c/Mensalidade__c.object-meta.xml
<CustomObject>
    <label>Mensalidade</label>
    <nameField>
        <displayFormat>MEN-{00000}</displayFormat>
        <label>Numero da mensalidade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mensalidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>