projetos/academia-salesforce/force-app/main/default/objects/Mensalidade__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Aluno</label>
    <referenceTo>Aluno__c</referenceTo>
    <relationshipLabel>Mensalidades</relationshipLabel>
    <relationshipName>Mensalidades</relationshipName>
    <type>Lookup</type>
</CustomField>