projetos/academia-salesforce/force-app/main/default/objects/Mensalidade__c/fields/Data_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_Pagamento__c</fullName>
    <label>Data de pagamento</label>
    <type>Date</type>
</CustomField>