projetos/academia-salesforce/force-app/main/default/objects/Mensalidade__c/fields/Pago__c.field-meta.xml
<CustomField>
    <fullName>Pago__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago</label>
    <type>Checkbox</type>
</CustomField>