projetos/academia-salesforce/force-app/main/default/objects/Mensalidade__c/fields/Vencimento__c.field-meta.xml
<CustomField>
    <fullName>Vencimento__c</fullName>
    <label>Vencimento</label>
    <type>Date</type>
</CustomField>